# cssed-python-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in
CVS/: Entries  Repository
po/: ChangeLog  POTFILES.in  cssed-python-plugin.pot  es.po  fr.po  update_potfiles_in
po/CVS/: Entries  Repository
redhat/: cssed-python-plugin.spec
redhat/CVS/: Entries  Repository
src/: Makefile.am  Makefile.in  cssed-pyobject.c  cssed-pyobject.h  pycssed-constants-table.c  pycssed-constants-table.h  pythonscript.c  pythonscript.h
src/CVS/: Entries  Repository
